<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/settings_header">
        <ListPreference
            app:defaultValue="popular"
            app:entries="@array/movie_categories_list_entries"
            app:entryValues="@array/movie_categories_list_values"
            app:key="movies_category"
            app:title="@string/movies_list_category"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/language_list_entries"
            app:entryValues="@array/language_list_values"
            app:key="movies_language"
            app:title="@string/movie_data_language"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="false"
            app:entries="@array/grid_view_status_entries"
            app:entryValues="@array/grid_view_status_values"
            app:key="grid_view_status"
            app:title="@string/grid_view_status"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>