<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#00000000"
    tools:context=".MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/movieCategoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/movieLanguageText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movieLanguageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/gridStatusSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieCategoryText" />

        <ImageView
            android:id="@+id/listViewIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/list_view"
            app:layout_constraintBottom_toBottomOf="@+id/gridStatusSwitch"
            app:layout_constraintEnd_toStartOf="@+id/gridStatusSwitch"
            app:layout_constraintTop_toTopOf="@+id/gridStatusSwitch"
            app:tint="@color/icon" />

        <Switch
            android:id="@+id/gridStatusSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/moviesRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieLanguageText" />

        <ImageView
            android:id="@+id/gridViewIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/lorem_ipsum"
            android:src="@drawable/grid_view"
            app:layout_constraintBottom_toBottomOf="@+id/gridStatusSwitch"
            app:layout_constraintStart_toEndOf="@+id/gridStatusSwitch"
            app:layout_constraintTop_toTopOf="@+id/gridStatusSwitch"
            app:tint="@color/icon" />

        <EditText
            android:id="@+id/searchBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/searchbox_placeholder"
            android:inputType="text"
            android:paddingRight="45dp"
            app:layout_constraintBottom_toTopOf="@+id/moviesRecyclerView"
            app:layout_constraintEnd_toEndOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridStatusSwitch" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/lorem_ipsum"
            android:src="@drawable/close"
            app:layout_constraintBottom_toTopOf="@+id/moviesRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridStatusSwitch"
            app:tint="@color/icon" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/moviesRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintBottom_toTopOf="@+id/feedbackText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridStatusSwitch" />

        <TextView
            android:id="@+id/feedbackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/loading_movies_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moviesRecyclerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>